tetrate/tis1703/e2e/bad-resource.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: non-fips-deployment-bad
  namespace: default
spec:
  selector:  
    matchLabels:
      app: non-fips
  template:
    metadata:
      labels:
        app: non-fips
    spec:
      containers:
        - name: app-container
          image: docker.io/istio/proxyv2:1.20.0
