tetrate/tis1703/enforce-fips-compliant-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-fips-compliant-images
  annotations:
    policies.kyverno.io/title: "Enforce FIPS Compliant Images"
    policies.kyverno.io/category: "Security"
    policies.kyverno.io/severity: "high"
    policies.kyverno.io/subject: "Pod, Deployment, StatefulSet, DaemonSet"
    policies.kyverno.io/description: "Ensures that container images are pulled from the FIPS-compliant registry fips-containers.istio.tetratelabs.com."
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-fips-registry
      match:
        any:
          - resources:
              kinds:
                - Deployment
      validate:
        message: "Container images must be pulled from fips-containers.istio.tetratelabs.com"
        pattern:
          spec:
            template:
              spec:
                containers:
                  - image: "fips-containers.istio.tetratelabs.com/*"
