tetrate/tis1703/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-fips-compliant-images
spec:
  validationFailureAction: Enforce
